--- a/configs/retrival_finetune2.yaml
+++ b/configs/retrival_finetune2.yaml
@@ -79,8 +79,8 @@ DATASETS:
   # TRAIN: ("icdar13_train",)
   # TRAIN: ("verisimilar",)
   # TEST: ("svt_test",)
-  # TEST: ("iiit_test",)
-  TEST: ("totaltext_test",)
+  TEST: ("iiit_test",)
+  # TEST: ("totaltext_test",)
   # TEST: ("cocotext_test",)
   # TEST: ("iiit_test","cocotext_test",)
   # TEST: ("chinese_collect",)
